# Haskell

./: CHANGELOG.md  README.md  cabal.project  merge2.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: package.cache  (+1 more)
lab00/: Hello.hi  Hello.hs
lab01/: .gitignore  AbstractInteger.hs  Calc.hs  TestAbstractInteger.hs
lab02/: Interval.hs  Main.hs  SimpleTime.hs  test_expectation.txt  test_inputs.txt
lab03/: .gitignore  Lab3.hs  Lab3X.hs  Main.hs  Tests.hs
lab04/: .gitignore  CollectPermutations.hs  WordCount.hs  WordSegmenter.hs  WordSegmenterLib.hs
lab05/: .gitignore  ApproxPi.hs  Lab5.hs  RandState.hs  RandStateExamples.hs
lab06/: Eval.hs  Lab6.hs  Main.hs  Unparse.hs  test_expectation.txt  test_exps.txt
lab07/: .gitignore  Lab7.hs  lab07.cabal
lab07/public_html/: index.html
lab07/public_html/ascii_art/: quality_controller.html  self_portrait.html
lectnotes/: HTML.hs  Parser.hs  Person.hs  PrettyHTML.hs  Tautcheck.hs  Triple.hs  day11.hs  day12.hs  day15.hs  day17.hs  day21.hs  day24.txt  day25.hi  day25.hs  day4.hs  disassociated-press.hs  ex16.hs  gettysburg.txt  homework18.hs  homework19.hs  notes.hs  notes10.hs  notes14.hs  notes20.hs  notes5.hs  notes6.hs  notes8.hs  notes9.hs  temp.hs
lectures/: Chatty.hs  Triple.hs  assignment3.hs  day10.hs  day13.hs  day14.hs  day3.hs  day5.hs  day6.hs  day8.hs  day9.hs  finalpractice.hs  lecture17.hs  lecture18.hs  parsingD.hs  proposition.hs
lib/: MergeSort.hs
test/: MergeSortTest.hs
