cabal-version:       >=1.10

name:                lab07
version:             0.1.0.0
build-type:          Simple

executable Lab7
  main-is:             Lab7.hs
  build-depends:       base,
                       mtl,
                       transformers,
                       bytestring,
                       network,
                       regex-compat
  default-language:    Haskell2010
